fix: edit html file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </h1>
     <nav class="menu">
       <ul>
-        <li><a href="#contacts">РЎontacts</a></li>
+        <li><a href="#contacts">Contacts</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#code">Code</a></li>
         <li><a href="#education">Education</a></li>
